--- a/01-UsoDeC/readme
+++ b/01-UsoDeC/readme
@@ -4,14 +4,14 @@
 
 2- Celular - Android; **Repositorio publico:** org:android; https://github.com/android    
 
-3- Computadora - Microsoft Windows; Repositorio publico: org:microsoft; https://github.com/Microsoft    
+3- Computadora - Microsoft Windows; **Repositorio publico:** org:microsoft; https://github.com/Microsoft    
 
-4- Radio - Noga; __Repositorio publico:__ No tiene  
+4- Radio - Noga; **Repositorio publico:** No tiene  
 
-5- Microondas - Bgh; Repositorio publico: No tiene  
+5- Microondas - Bgh; **Repositorio publico:** No tiene  
 
-6- Cafetera - Electroluz; Repositorio publico: No tiene  
+6- Cafetera - Electroluz; **Repositorio publico:** No tiene  
 
-7- Tostadora - Ultracomb; Repositorio publico: No tiene  
+7- Tostadora - Ultracomb; **Repositorio publico:** No tiene  
   
 Todas las tecnologias listadas se desarrollan en C  
